h1. CHANGELOG

h3. 0.4.2 May 10, 2014

* additional 'devise' tags for RSpec tests

h3. 0.4.1 May 10, 2014

* add 'devise' tag to RSpec tests
* change 'log in' to 'sign in' and 'logout' to 'sign out'

h3. 0.4.0 May 6, 2014

* generate tests when RSpec is installed
* update Users controller to deny access to other users' profiles

h3. 0.3.1 May 2, 2014

* add a generator for an 'About' page

h3. 0.3.0 May 1, 2014

* add Devise registrations controller for 'users' and 'authorized' generators

h3. 0.2.0 May 1, 2014

* fixes for 'authorized' generator

h3. 0.1.0 May 1, 2014

* initial release