@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 0.4.3 May 10, 2014
+
+* use Devise 'lazy way' to add name attribute to permitted parameters
+
 h3. 0.4.2 May 10, 2014
 
 * additional 'devise' tags for RSpec tests
